# async-task-cpp

./: .gitignore  CMakeLists.txt  makefile  readme.md
include/async-task/: async-task.hh  sptr.hh  task-processor-manager.hh  task-processor.hh  task-queue.hh  task.hh
src/: async-task.cc  task-processor-manager.cc  task-processor.cc  task-queue.cc
test/: async-task  test-async-task.cc  test-sptr.cc  test-task-processor-pool.cc
