CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT (async-task-cpp)

SET ( CMAKE_VERBOSE_MAKEFILE true )


set (CMAKE_CXX_FLAGS "-Wall")
set (CMAKE_CXX_FLAGS_DEBUG "-g")
set (CMAKE_CXX_FLAGS_RELEASE "-O3")
set (CMAKE_CXX_STANDARD 17)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SOURCES)
ADD_LIBRARY(async-task STATIC ${SOURCES})
